# aps3x

./: BUILD_INSTRUCTIONS.md  OPTIMIZATION_SUMMARY_UA.md  POCO_F6_OPTIMIZATIONS.md  QUICKSTART.md  build_poco_f6.sh  gradle.properties
.github/: README_ACTIONS.md
.github/workflows/: build-poco-f6.yml
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  adreno735_optimizations.h  aps3e_rp3_impl.cpp  emulator_aps3e.cpp  poco_f6_optimizations.h  real_steel_fps_patch.h
app/src/main/cpp/rpcs3/Utilities/: bin_patch.h
app/src/main/cpp/rpcs3/rpcs3/Emu/: system_config.h
app/src/main/cpp/rpcs3/rpcs3/Emu/Cell/: PPUThread.cpp
app/src/main/cpp/rpcs3/rpcs3/Emu/Cell/Modules/: cellCamera.cpp  sceNp.cpp  sceNpTrophy.cpp
app/src/main/cpp/rpcs3/rpcs3/Emu/Cell/lv2/: lv2.cpp  sys_fs.cpp  sys_ppu_thread.cpp  sys_process.cpp  sys_time.cpp
app/src/main/cpp/rpcs3/rpcs3/util/: atomic.cpp  cpu_stats.cpp  sysinfo.hpp  types.hpp  video_provider.h  vm_native.cpp
app/src/main/java/aenu/aps3e/: AboutActivity.java  MainActivity.java
app/src/main/res/drawable/: ic_menu_refresh.xml
app/src/main/res/layout/: game_item.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-id/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-ms/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-pt-rPT/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-th/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: emulator_settings.xml
gradle/: libs.versions.toml
